[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scripts/combat/CombatScene.gd" id="1"]
[ext_resource type="Script" path="res://scripts/combat/CombatManager.gd" id="2"]
[ext_resource type="Theme" path="res://ui/GameTheme.tres" id="3"]

[node name="CombatScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("3")
script = ExtResource("1")

[node name="BG" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 7

[node name="CombatManager" type="Node" parent="."]
script = ExtResource("2")

[node name="MainHBox" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
separation = 20

[node name="PartyVBox" type="VBoxContainer" parent="MainHBox"]
size_flags_vertical = 2
separation = 10

[node name="CharacterPanel1" type="PanelContainer" parent="MainHBox/PartyVBox"]
[node name="VBox" type="VBoxContainer" parent="MainHBox/PartyVBox/CharacterPanel1"]
[node name="PortraitPlaceholder" type="TextureRect" parent="MainHBox/PartyVBox/CharacterPanel1/VBox"]
custom_minimum_size = Vector2(64,64)
[node name="HPBar" type="ProgressBar" parent="MainHBox/PartyVBox/CharacterPanel1/VBox"]
size_flags_horizontal = 2
max_value = 100.0
value = 100.0
[node name="CardSlots" type="HBoxContainer" parent="MainHBox/PartyVBox/CharacterPanel1/VBox"]

[node name="CardPlaceholder1" type="TextureRect" parent="MainHBox/PartyVBox/CharacterPanel1/VBox/CardSlots"]
custom_minimum_size = Vector2(48,48)
[node name="CardPlaceholder2" type="TextureRect" parent="MainHBox/PartyVBox/CharacterPanel1/VBox/CardSlots"]
custom_minimum_size = Vector2(48,48)
[node name="CardPlaceholder3" type="TextureRect" parent="MainHBox/PartyVBox/CharacterPanel1/VBox/CardSlots"]
custom_minimum_size = Vector2(48,48)
[node name="CardPlaceholder4" type="TextureRect" parent="MainHBox/PartyVBox/CharacterPanel1/VBox/CardSlots"]
custom_minimum_size = Vector2(48,48)

[node name="CharacterPanel2" type="PanelContainer" parent="MainHBox/PartyVBox"]
[node name="VBox2" type="VBoxContainer" parent="MainHBox/PartyVBox/CharacterPanel2"]
[node name="PortraitPlaceholder" type="TextureRect" parent="MainHBox/PartyVBox/CharacterPanel2/VBox2"]
custom_minimum_size = Vector2(64,64)
[node name="HPBar" type="ProgressBar" parent="MainHBox/PartyVBox/CharacterPanel2/VBox2"]
size_flags_horizontal = 2
max_value = 100.0
value = 100.0
[node name="CardSlots" type="HBoxContainer" parent="MainHBox/PartyVBox/CharacterPanel2/VBox2"]
[node name="CardPlaceholder1" type="TextureRect" parent="MainHBox/PartyVBox/CharacterPanel2/VBox2/CardSlots"]
custom_minimum_size = Vector2(48,48)
[node name="CardPlaceholder2" type="TextureRect" parent="MainHBox/PartyVBox/CharacterPanel2/VBox2/CardSlots"]
custom_minimum_size = Vector2(48,48)
[node name="CardPlaceholder3" type="TextureRect" parent="MainHBox/PartyVBox/CharacterPanel2/VBox2/CardSlots"]
custom_minimum_size = Vector2(48,48)
[node name="CardPlaceholder4" type="TextureRect" parent="MainHBox/PartyVBox/CharacterPanel2/VBox2/CardSlots"]
custom_minimum_size = Vector2(48,48)

[node name="CharacterPanel3" type="PanelContainer" parent="MainHBox/PartyVBox"]
[node name="VBox3" type="VBoxContainer" parent="MainHBox/PartyVBox/CharacterPanel3"]
[node name="PortraitPlaceholder" type="TextureRect" parent="MainHBox/PartyVBox/CharacterPanel3/VBox3"]
custom_minimum_size = Vector2(64,64)
[node name="HPBar" type="ProgressBar" parent="MainHBox/PartyVBox/CharacterPanel3/VBox3"]
size_flags_horizontal = 2
max_value = 100.0
value = 100.0
[node name="CardSlots" type="HBoxContainer" parent="MainHBox/PartyVBox/CharacterPanel3/VBox3"]
[node name="CardPlaceholder1" type="TextureRect" parent="MainHBox/PartyVBox/CharacterPanel3/VBox3/CardSlots"]
custom_minimum_size = Vector2(48,48)
[node name="CardPlaceholder2" type="TextureRect" parent="MainHBox/PartyVBox/CharacterPanel3/VBox3/CardSlots"]
custom_minimum_size = Vector2(48,48)
[node name="CardPlaceholder3" type="TextureRect" parent="MainHBox/PartyVBox/CharacterPanel3/VBox3/CardSlots"]
custom_minimum_size = Vector2(48,48)
[node name="CardPlaceholder4" type="TextureRect" parent="MainHBox/PartyVBox/CharacterPanel3/VBox3/CardSlots"]
custom_minimum_size = Vector2(48,48)

[node name="CharacterPanel4" type="PanelContainer" parent="MainHBox/PartyVBox"]
[node name="VBox4" type="VBoxContainer" parent="MainHBox/PartyVBox/CharacterPanel4"]
[node name="PortraitPlaceholder" type="TextureRect" parent="MainHBox/PartyVBox/CharacterPanel4/VBox4"]
custom_minimum_size = Vector2(64,64)
[node name="HPBar" type="ProgressBar" parent="MainHBox/PartyVBox/CharacterPanel4/VBox4"]
size_flags_horizontal = 2
max_value = 100.0
value = 100.0
[node name="CardSlots" type="HBoxContainer" parent="MainHBox/PartyVBox/CharacterPanel4/VBox4"]
[node name="CardPlaceholder1" type="TextureRect" parent="MainHBox/PartyVBox/CharacterPanel4/VBox4/CardSlots"]
custom_minimum_size = Vector2(48,48)
[node name="CardPlaceholder2" type="TextureRect" parent="MainHBox/PartyVBox/CharacterPanel4/VBox4/CardSlots"]
custom_minimum_size = Vector2(48,48)
[node name="CardPlaceholder3" type="TextureRect" parent="MainHBox/PartyVBox/CharacterPanel4/VBox4/CardSlots"]
custom_minimum_size = Vector2(48,48)
[node name="CardPlaceholder4" type="TextureRect" parent="MainHBox/PartyVBox/CharacterPanel4/VBox4/CardSlots"]
custom_minimum_size = Vector2(48,48)

[node name="EnemyVBox" type="VBoxContainer" parent="MainHBox"]
size_flags_vertical = 2
separation = 10

[node name="EnemyPanel1" type="PanelContainer" parent="MainHBox/EnemyVBox"]
[node name="VBox" type="VBoxContainer" parent="MainHBox/EnemyVBox/EnemyPanel1"]
[node name="IconPlaceholder" type="TextureRect" parent="MainHBox/EnemyVBox/EnemyPanel1/VBox"]
custom_minimum_size = Vector2(64,64)
[node name="HPBar" type="ProgressBar" parent="MainHBox/EnemyVBox/EnemyPanel1/VBox"]
size_flags_horizontal = 2
max_value = 100.0
value = 100.0

[node name="EnemyPanel2" type="PanelContainer" parent="MainHBox/EnemyVBox"]
[node name="VBox2" type="VBoxContainer" parent="MainHBox/EnemyVBox/EnemyPanel2"]
[node name="IconPlaceholder" type="TextureRect" parent="MainHBox/EnemyVBox/EnemyPanel2/VBox2"]
custom_minimum_size = Vector2(64,64)
[node name="HPBar" type="ProgressBar" parent="MainHBox/EnemyVBox/EnemyPanel2/VBox2"]
size_flags_horizontal = 2
max_value = 100.0
value = 100.0

[node name="EnemyPanel3" type="PanelContainer" parent="MainHBox/EnemyVBox"]
[node name="VBox3" type="VBoxContainer" parent="MainHBox/EnemyVBox/EnemyPanel3"]
[node name="IconPlaceholder" type="TextureRect" parent="MainHBox/EnemyVBox/EnemyPanel3/VBox3"]
custom_minimum_size = Vector2(64,64)
[node name="HPBar" type="ProgressBar" parent="MainHBox/EnemyVBox/EnemyPanel3/VBox3"]
size_flags_horizontal = 2
max_value = 100.0
value = 100.0

[node name="CombatLogPanel" type="PanelContainer" parent="."]
anchor_left = 0.0
anchor_right = 1.0
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -150

[node name="CombatLog" type="RichTextLabel" parent="CombatLogPanel"]
size_flags_horizontal = 2
size_flags_vertical = 2
